created signUp API route

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGO = "mongodb+srv://antibug050:antibug__@e-state.isrjnrf.mongodb.net/?retryWrites=true&w=majority"
+MONGO = "mongodb+srv://antibug050:antibug__@e-state.isrjnrf.mongodb.net/E-State?retryWrites=true&w=majority"
