--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 MONGO = "mongodb+srv://antibug050:antibug__@e-state.isrjnrf.mongodb.net/E-State?retryWrites=true&w=majority"
+JWT_TOKEN = "ewrtesdw"
